# stream-read-ods

./: .coveragerc  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  setup.py  stream_read_ods.py  test_stream_read_ods.py
.circleci/: config.yml
.github/workflows/: test.yml
fixtures/: doc.odt  excel-with-styles.ods  excel.ods  libreoffice-with-many-merged-cells.ods  libreoffice-with-repeated.ods  libreoffice-with-row-col-spans-repeated.ods  libreoffice-with-row-spanned.ods  libreoffice-with-spanned.ods  libreoffice-with-styles.ods  libreoffice.ods
